--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <!--HEADER-->
     <div class="container">
         <div id="header">
             Portfolio
@@ -22,6 +23,7 @@
             </ul>
         </div>
     </div> 
+
     <div class="container">
         <div id="headerCta">
             <h1>Olá, meu nome <br>
@@ -36,6 +38,7 @@
             <img src="/img/header.svg" alt="">
         </div>
     </div>  
+
     <div id="clients" class="container">
         <div id="headerClientText">
             Alguns dos <br> meus clientes
@@ -50,6 +53,10 @@
             <img src="/img/spotify.svg" alt="">
         </div>
     </div>
+
+
+<!--SERVIÇOS-->
+
     <div class="container" id="service">
         <div id="services">
             <h2 class="red">Conheça</h2> 
@@ -58,6 +65,7 @@
             alcançar grandes resultados.</p> 
         </div>
     </div>
+    
     <div class="container" id="contact">
         <div class="servicesTwo">
             <img src="/icons/consultoria.svg" alt="">
@@ -81,6 +89,8 @@
             </p>
         </div>
     </div>
+
+<!--CONTATO-->
     <div class="container">
         <div id="formsIMG">
             <img src="/img/photoForms.svg" alt="">
@@ -97,6 +107,9 @@
             </form>
         </div>
     </div>
+
+
+    <!--PORTFOLIO-->
     <div class="container" id="portfolio">
         <div>
             <h2 class="red">
